# bft-federated-learning

./: .gitignore  README.MD  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  zz.py
app/: README.MD  client_app copy 2.py  client_app copy.py  client_app.py  server_app copy.py  server_app.py  task.py
app/bft/: app.py  bft_simulator.py
app/client/: byzantine_attack.py  byzantine_strategy.py  client_manager.py  federated_client.py
app/clients/: federated_client.py  flower_client.py  genuine_client.py
app/nets/: cifar10_cnn.py  cnn_classifier.py  model.py  train.py
app/server/: aggregation_method.py  bft_basic_strategy.py  bft_strategy.py  federated_strategy_basic.py  server_evaluation.py  server_manager copy 2.py  server_manager.py
app/utils/: dataset_loader.py  logger.py  wandb_mod.py
bft/: bft_server_strategy.py  bft_sim_run.py  client_federated.py  config_base.py  config_sim.py
bft_federated/: __init__.py  client_app.py  server_app.py  task.py
bft_federated/bft/: bft_simulator.py  bft_strategy.py
bft_federated/clients/: federated_client.py  malicious_client.py
bft_federated/nets/: model.py  train.py
bft_federated/utils/: base_config.py  bft_simulation_config.py  performance_eval.py
enums/: bft_message.py  message_type.py
fed/: app.py  fed_client.py  train.py
federated/: app.py  dataset_loader.py  fed_client.py  fed_server.py  fed_strategy.py  server_evaluator.py  simulator.py  train.py
federated_bft/: README.MD  app.py
federated_bft/bft/: bft_simulator.py  bft_strategy.py
federated_bft/clients/: federated_client.py  genuine_client.py  malicious_client.py
federated_bft/nets/: model.py  train.py
federated_bft/utils/: base_config.py  bft_simulation_config.py  path.py  performance_eval.py
federated_learning/: bft_server_strategy.py  experiment.py  experiment_tracker.py  malicious_client.py
fedml/: requirements.txt  server.py
hotstuff/: Dockerfile  docker-compose.yml  requirements.txt
hotstuff/proto/: hotstuff.proto  util.sh
hotstuff/src/: client.py  hotstuff_pb2.py  hotstuff_pb2_grpc.py  server.py
models/: bft_consensus.py  experiment_config.py  maliciopus_type.py
node/: Dockerfile  mnist_model.py  tendermint-status.py  test.py  train.py
notebooks/: cifar10_cnn.ipynb  cifar10_cnn_improv.ipynb  cifar10_improv_cnn.ipynb
src/: app.py  config.py  dataloader.py  fed_client.py  fed_evaluation.py  fed_server.py  fed_simulator.py  fed_strategy.py  model.py  train.py
src/bft/: app.py  bft_simulator.py  client_genuine.py  client_malicious.py  performance_eval.py  train.py
src/fed/: config_base.py  dataset_loader.py  fed_strategy.py  logger.py  model.py  server_evaluator.py  simulator.py
streamlit/: Dockerfile
tendermint/: Dockerfile  README.MD  requirements.txt
utils/: tendermint-init.sh
