[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bft-federated"
version = "1.0.0"
description = "Federated Learning with Byzantine Fault Tolerance (BFT)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.12.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "muticia"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
# options.num-nodes = 10
# options.num-clients = 10
# # options.num-rounds = 10
# options.num-epochs = 10
# options.batch-size = 32
# options.lr = 0.01
# options.seed = 42
